--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -198,10 +198,10 @@
           <br>
           <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial Electromagnetic Lab</big></papertitle>
           <br>
-          Jul 2021 - Present
+          Jul 2020 - Oct 2021
           <br>
           <p align="justify">
-            Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
+            Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial & Electromagnetic Lab</a> at 
             National University of Science and University.
           </p>
           <p>UAV Design Group:
@@ -241,7 +241,7 @@
           Jul 2019 - Jan 2020
           <br>
           <p align="justify">
-            Assisted research activities in Mechanical Department o NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
+            Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
               <ul>
                   <li align="justify">Conducted a comparative study to assess different RANS turbulence models for prediction of secondary peek in Nusselt number resulting from a
                     hydraulic jump in jet impingement cooling.</li>
