--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -196,7 +196,7 @@
          
           <papertitle><big><b>National University of Science and Technology</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial Electromagnetic Lab</big></papertitle>
+          <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial & Electromagnetic Lab</big></papertitle>
           <br>
           Jul 2020 - Oct 2021
           <br>
