--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -196,12 +196,12 @@
          
           <papertitle><big><b>National University of Science and Technology</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial & Electromagnetic Lab</big></papertitle>
+          <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial Electromagnetic Lab</big></papertitle>
           <br>
           Jul 2020 - Oct 2021
           <br>
           <p align="justify">
-            Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial & Electromagnetic Lab</a> at 
+            Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
             National University of Science and University.
           </p>
           <p>UAV Design Group:
