--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -261,6 +261,10 @@
 
         
 <!-- Publications -->
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-publications" id="publications">
+  <h2>Publications</h2>
+</button>
+<div id="content-experience" class="collapse in">
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
