--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -263,19 +263,14 @@
 <!-- Publications -->
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-publications" id="publications">
   <h2>Publications</h2>
+      <p>
+        I'm interested in robotics, optimization, phyics simulation and dynamical systems.  
+      </p>
+      <br>
 </button>
 <div id="content-experience" class="collapse in">
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-          <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Research</h2>
-              <p>
-                I'm interested in robotics, optimization, phyics simulation and dynamical systems.
-              </p>
-            </td>
-          </tr>
-        </table>
+        
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           {% for post in site.posts %}
@@ -320,6 +315,7 @@
         <br>
         <br>
 
+<hr class="soft">
 <!-- Intell Projects -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
