--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -266,6 +266,16 @@
 </button>
 <div id="content-experience" class="collapse in">
 
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <p>
+                I'm interested in robotics, optimization, phyics simulation and dynamical systems.
+              </p>
+            </td>
+          </tr>
+        </table>
       
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           {% for post in site.posts %}
