--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -266,7 +266,6 @@
 </button>
 <div id="content-experience" class="collapse in">
 
-
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -320,6 +319,7 @@
         <br>
         <br>
 
+</div>
 <hr class="soft">
 <!-- Intell Projects -->
 
