--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -263,12 +263,13 @@
 <!-- Publications -->
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-publications" id="publications">
   <h2>Publications</h2>
+  <p>I'm interested in robotics, optimization, phyics simulation and dynamical systems.</p>    
 </button>
 <div id="content-experience" class="collapse in">
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-            <td style="padding:0.5%;width:100%;vertical-align:top">
+            <td style="padding:2.5%;width:100%;vertical-align:top">
               <p>
                 I'm interested in robotics, optimization, phyics simulation and dynamical systems.
               </p>
