--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 &nbsp;/&nbsp;
                 <a href="#projects" onclick=Expand("projects")>Projects</a>
                 &nbsp;/&nbsp;
-                <a href="mailto:amishmittal@outlook.com">Contact</a>
+                <a href="mailto:rafaymohiuddin7@gmail.com">Contact</a>
               </p>
             </td>
           </tr>            
@@ -263,8 +263,7 @@
 <!-- Publications -->
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-publications" id="publications">
   <h2>Publications</h2>
-  <p>I'm interested in robotics, optimization, phyics simulation and dynamical systems.</p>    
-</button>
+  </button>
 <div id="content-experience" class="collapse in">
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
