--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -268,7 +268,7 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-            <td style="padding:2.5%;width:100%;vertical-align:top">
+            <td style="padding:2.5%;width:100%">
               <p>
                 I'm interested in robotics, optimization, phyics simulation and dynamical systems.
               </p>
