--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -266,9 +266,9 @@
   </button>
 <div id="content-experience" class="collapse in">
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:collapse;margin-right:auto;margin-left:auto;">
           <tr>
-            <td style="padding:2.5%;width:100%">
+            <td style="padding:2.5%;width:100%;vertical-align:top">
               <p>
                 I'm interested in robotics, optimization, phyics simulation and dynamical systems.
               </p>
