--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/dp2.jpg"><img style="width:120%;max-width:120%; border-radius: 5%" alt="profile photo" src="images/dp2.jpg" class="hoverZoomLink"/></a>              
+              <a href="images/dp2.jpg"><img src="images/dp2.jpg" style="width:120%;max-width:120%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
         </table>
