--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -387,7 +387,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Other Projects</h2>
-              <p> These include coursework, side projects and unpublished research work. 
+              <p> These include projects during courese work coursework and other side projects.  
               </p>
             </td>
           </tr>
