--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,7 @@
     <tr>
         <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="110" class="side-image">
+                <img src='images/tum-logo.png' width="110" class="side-image;center">
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
