--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymohiuddin/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://drive.google.com/file/d/1fr6ufcUtGAbgSvX5ICJvp33_EEHiykUq/view" target="_blank"> CV</a> 
+                <a href="https://github.com/rafaymhddn/academic-cv" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
