--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -383,11 +383,15 @@
 
 <!-- Other Projects -->        
 
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-projects" id="projects">
+  <h2>Publications</h2>
+  </button>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Other Projects</h2>
-              <p> These include projects during courese work coursework and other side projects.  
+              <h2>Projects</h2>
+              <p> These include projects during research, work and courses.  
               </p>
             </td>
           </tr>
