--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -311,7 +311,7 @@
 
 </div>
 <hr class="soft">
-<!-- Intell Projects -->
+<!-- Intell Projects 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
@@ -380,7 +380,7 @@
         <br>
         <br>
         <br>
-
+-->
 <!-- Other Projects -->        
 
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-projects" id="projects">
