--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,8 @@
                 <a href="#projects" onclick=Expand("projects")>Projects</a>
                 &nbsp;/&nbsp;
                 <a href="mailto:rafaymohiuddin7@gmail.com">Contact</a>
+                &nbsp;/&nbsp;
+                <a href="mailto:rafaymohiuddin7@gmail.com">Under Development (sory few links might not work)</a>
               </p>
             </td>
           </tr>            
