--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
                 &nbsp;/&nbsp;
                 <a href="mailto:rafaymohiuddin7@gmail.com">Contact</a>
                 &nbsp;/&nbsp;
-                <a href="mailto:rafaymohiuddin7@gmail.com">Under Development (sory few links might not work)</a>
+                <a href="mailto:rafaymohiuddin7@gmail.com">{UNDER DEVELOPMENT}</a>
               </p>
             </td>
           </tr>            
@@ -386,13 +386,13 @@
 <!-- Other Projects -->        
 
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-projects" id="projects">
-  <h2>Publications</h2>
+  <h2>Projects</h2>
   </button>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Projects</h2>
+              <!--<h2>Projects</h2>-->
               <p> These include projects during research, work and courses.  
               </p>
             </td>
