--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -419,14 +419,14 @@
               <a href="{{post.website}}">website</a> /
               {% endif %}
               {% if post.paper %}
-              <a href="{{post.paper}}">paper</a> /
+              <a href="{{post.arxiv}}">arxiv</a> /
               {% endif %}
               {% if post.patent %}
               <a href="{{post.patent}}">patent</a> /
               {% endif %}
               {% if post.patent2 %}
               <a href="{{post.patent2}}">patent #2</a> /
-              {% endif %}
+              {% endif %}arxiv
               {% if post.patent3 %}
               <a href="{{post.patent3}}">patent #3</a> /
               {% endif %}
