--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -165,7 +165,7 @@
     <tr>
         <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="110" class="side-image">
+                <img src='images/tum-logo.png' width="130" class="side-image">
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
@@ -191,7 +191,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/nust-logo.png' width="110" class="side-image">
+              <img src='images/nust-logo.png' width="130" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -232,7 +232,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/ned-logo.png' width="110" class="side-image">
+              <img src='images/ned-logo.png' width="130" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -419,7 +419,7 @@
               <a href="{{post.website}}">website</a> /
               {% endif %}
               {% if post.paper %}
-              <a href="{{post.arxiv}}">arxiv</a> /
+              <a href="{{post.paper}}">paper</a> /
               {% endif %}
               {% if post.patent %}
               <a href="{{post.patent}}">patent</a> /
