--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
     <tr>
         <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="130" class="side-image;center">
+                <img src='images/tum-logo.png' width="140" class="side-image;center">
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
@@ -132,7 +132,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/ned-logo.png' width="130" class="side-image">
+              <img src='images/ned-logo.png' width="140" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -165,7 +165,7 @@
     <tr>
         <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="130" class="side-image">
+                <img src='images/tum-logo.png' width="140" class="side-image">
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
@@ -191,7 +191,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/nust-logo.png' width="130" class="side-image">
+              <img src='images/nust-logo.png' width="140" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -232,7 +232,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/ned-logo.png' width="130" class="side-image">
+              <img src='images/ned-logo.png' width="140" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -285,7 +285,7 @@
               <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
               <br>
               {% if post.arxiv %}
-              <a href="{{post.paper}}">arxiv</a> /
+              <a href="{{post.paper}}">paper</a> /
               {% endif %}
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
