--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -282,9 +282,9 @@
               {{post.authors}}
 
               <br>
-              <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
+              <em>{{post.subtitle} | {post.venue}}</em>, {{ post.date | date: "%Y" }}
               <br>
-              {% if post.arxiv %}
+              {% if post.paper %}
               <a href="{{post.paper}}">paper</a> /
               {% endif %}
               {% if post.video %}
