--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
           <tr style="padding:0px">                                    
             <td style="padding:1%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <h1  style="text-align:center"><name>Rafay.</name></h1>
+                <h1  style="text-align:center"><name>Rafay Mohiuddin</name></h1>
               </p>
             </td>
           </tr>            
