--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -282,7 +282,7 @@
               {{post.authors}}
 
               <br>
-              <em>{{post.subtitle}} {{post.venue}}</em>, {{ post.date | date: "%Y" }}
+              <em>{{post.subtitle}} - {{post.venue}}</em>, {{ post.date | date: "%Y" }}
               <br>
               {% if post.paper %}
               <a href="{{post.paper}}">paper</a> /
