--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,8 +122,8 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Advanced Programming (C++), Professional Software Development, Functional Analysis & Computational Linear Algebra, Elements of Machine Learning, Scientific Visualization, Cyber-Physical Systems Lab, Software Lab </li>
-                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Advance Fluid Dynamics, Continuum Mechanics   </li>
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab </li>
+                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics   </li>
                 </ul>
             </p>
         </td>
