--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymohiuddin/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://github.com/rafaymhddn/academic-cv" target="_blank"> CV</a> 
+                <a href="https://drive.google.com/file/d/1xkRVHeltHzy8oYrGOHXN_pbgnkC9kkjl/view?usp=sharing" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -122,8 +122,9 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab </li>
-                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics   </li>
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I (C++), Professional Software Development, Cyber-Physical Systems Lab, Computation in Engineering II (C++), Software Lab, Seminar on Machine Learning<SUP>*</SUP>, Introduction to Deep Learning<SUP>*</SUP>, Scientific Visualization<SUP>*</SUP>, Computational Linear Algebra and Functional Analysis<SUP>*</SUP> </li>
+                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II <SUP>*</SUP>  </li>
+                    <SUP> *</SUP> inprogress (current semester)
                 </ul>
             </p>
         </td>
