--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,9 +122,10 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I (C++), Professional Software Development, Cyber-Physical Systems Lab, Computation in Engineering II (C++), Software Lab, Seminar on Machine Learning<SUP>*</SUP>, Introduction to Deep Learning<SUP>*</SUP>, Scientific Visualization<SUP>*</SUP>, Computational Linear Algebra and Functional Analysis<SUP>*</SUP> </li>
-                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II <SUP>*</SUP>  </li>
-                    <SUP> *</SUP> inprogress (current semester)
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Seminar on Machine Learning*, Introduction to Deep Learning*, Scientific Visualization*, Computational Linear Algebra and Functional Analysis </li>
+                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics,Computational Material Modeling II*   </li>
+                    * in progress
+                    
                 </ul>
             </p>
         </td>
@@ -180,10 +181,14 @@
             <p align="justify">
               Working as student research assisting (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
-                    <li align="justify">Consolidated workflow for evaluating extrinsic camera parameters for spinning lidar and camera calibration, in absence of reference.</li>
-                    <li align="justify">Implemented libraries for SLAM implementation on LiDAR. Updated code to support Ouster and Robosense LiDAR.</li>
-                    <li align="justify">Working on dockerized implementation of libraries, sensor communication
-                      at distance using nimbro-network, and mobile deployment of mapping system utilizing GO1 robot.</li>
+                    <li align="justify">Assisted deployment of mapping system around GO1 robot. Stream-
+                      line the process for calibrating, synchronizing, communicating, and data
+                      recording from the sensors.</li>
+                    <li align="justify">Implemented different ROS libraries for lidar-based localization and map-
+                      ping. Dockerized and configured libraries for the mapping system.</li>
+                    <li align="justify">Working on the implementation of pose graph optimization on the existing
+                      SLAM library and benchmarking localization performance of different slam
+                      packages.</li>
                 </ul>
             </p>
         </td>
