--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,9 +122,9 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Seminar on Machine Learning*, Introduction to Deep Learning*, Scientific Visualization*, Computational Linear Algebra and Functional Analysis </li>
-                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics,Computational Material Modeling II*   </li>
-                    * in progress
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning *, Introduction to Deep Learning *, Scientific Visualization *, Functional Analysis and Computational Linear Algebra *  </li>
+                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II *   </li>
+                    (* in progress, current semester)
                     
                 </ul>
             </p>
@@ -212,25 +212,24 @@
             Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
             National University of Science and University.
           </p>
-          <p>UAV Design Group:
+          <p>Control Group:
               <ul> 
-                  <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOL.</li>
+                  <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOLCreated model for VTOL, fixed-wing UAVs in X-plane flight simulator.</li>
                   <li align="justify">Developed setup for PID tuning of autopilot through SITL (software in the loop) simulation by integrating X-plane simulation models with mission 
                     planner firmware, for fixed wing UAV.</li>
               </ul>
           </p>
-          <p>Control Group:
+          <p>Design Group:
             <ul> 
-                <li align="justify">Created model for VTOL, fixed-wing UAVs in X-plane flight simulator.</li>
-                <li align="justify">Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans.</li>
-                <li align="justify">Optimized aerodynamics and structural components by conducting CFD, FEA, FSI simulations using ANSYS</li>
+                <li align="justify">Created model for VTOL, fixed-wing UAVs in X-plane flight simulator.Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOL. </li>
+                <li align="justify">Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans. Optimized aerodynamics and structural components by conducting CFD, FEA, FSI simulations using ANSYS.Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans.</li>
+                <li align="justify">Design test bench and propulsion system for DLE-120 engine.</li>
             </ul>
         </p>
         <p>Material Testing Group:
           <ul> 
-              <li align="justify">Collected data obtained from ultrasonic testing of different composite samples with different composite layup schemes, conduct destructive testing 
-                and numeric simulation (ANSYS ACP) of respective samples.</li>
-              <li align="justify">Collaborated in preparation of course work and conducted lab sessions on calibrating and sizing defects through PAUT (phased array ultrasonic testing) using Omni scan MX8.</li>
+              <li align="justify">Conducted numeric simulation (ANSYS ACP), destructive and non-destructive (ultrasonic) testing of different composite samples with different composite layup schemes. </li>
+              <li align="justify">Collaborated in preparation of coursework and conducted lab sessions on calibrating and sizing defects through PAUT (phased array ultrasonic testing) using Omni scan MX8. </li>
           </ul>
       </td>
   </tr>
