--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,7 +145,7 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-              <b>Thesis:</b> Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
+              Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
               <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.              
           </p>
       </td>
@@ -214,14 +214,14 @@
           </p>
           <p>Control Group:
               <ul> 
-                  <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOLCreated model for VTOL, fixed-wing UAVs in X-plane flight simulator.</li>
-                  <li align="justify">Developed setup for PID tuning of autopilot through SITL (software in the loop) simulation by integrating X-plane simulation models with mission 
-                    planner firmware, for fixed wing UAV.</li>
+                  <li align="justify">Created model for VTOL, fixed-wing UAVs in x-plane flight simulator.</li>
+                  <li align="justify">Conducted SITL (software in the loop) simulation by integrating x-plane flight simulator environment with mission 
+                    planner (PX4) firmware, for tuning controller of fixed wing UAVs.</li>
               </ul>
           </p>
           <p>Design Group:
             <ul> 
-                <li align="justify">Created model for VTOL, fixed-wing UAVs in X-plane flight simulator.Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOL. </li>
+                <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOL. </li>
                 <li align="justify">Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans. Optimized aerodynamics and structural components by conducting CFD, FEA, FSI simulations using ANSYS.Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans.</li>
                 <li align="justify">Design test bench and propulsion system for DLE-120 engine.</li>
             </ul>
@@ -250,11 +250,14 @@
           <p align="justify">
             Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
               <ul>
-                  <li align="justify">Conducted a comparative study to assess different RANS turbulence models for prediction of secondary peek in Nusselt number resulting from a
-                    hydraulic jump in jet impingement cooling.</li>
-                  <li align="justify">Extensively reviewed literature and conducted numerical simulations to asses influence of different types of fins, 
-                    surface topology, pulsating/synthetic jets, and nanofluids on heat transfer characteristics of impinging jets. Collaborate on two research papers based in findings that got published in peer reviewed journals</li>
-                  <li align="justify">Supervised research project of two undergraduate student group.</li>
+                  <li align="justify">Conducted a comparative study to assess different RANS turbulence mod-
+                    els for prediction of the secondary peak in Nusselt number resulting from
+                    a hydraulic jump in jet impingement cooling.</li>
+                  <li align="justify">Extensively reviewed literature and conducted numerical simulations re-
+                    lated to impinging jets focusing on the influence of different types of fins,
+                    surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
+                    characteristics. Collaborate on two peer reviewed research papers based in findings.</li>
+                  <li align="justify">Guided two undergraduate student groups, on their research project.</li>
               </ul>
           </p>
       </td>
