--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -184,8 +184,7 @@
                     <li align="justify">Assisted deployment of mapping system around GO1 robot. Stream-
                       line the process for calibrating, synchronizing, communicating, and data
                       recording from the sensors.</li>
-                    <li align="justify">Implemented different ROS libraries for lidar-based localization and map-
-                      ping. Dockerized and configured libraries for the mapping system.</li>
+                    <li align="justify">Implemented different ROS libraries for lidar-based localization and mapping. Dockerized and configured libraries for the mapping system.</li>
                     <li align="justify">Working on the implementation of pose graph optimization on the existing
                       SLAM library and benchmarking localization performance of different slam
                       packages.</li>
