--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -431,7 +431,7 @@
               {% endif %}
               {% if post.patent2 %}
               <a href="{{post.patent2}}">patent #2</a> /
-              {% endif %}arxiv
+              {% endif %}
               {% if post.patent3 %}
               <a href="{{post.patent3}}">patent #3</a> /
               {% endif %}
