--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,7 +145,8 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-              Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
+              Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets 
+              <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
               <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.              
           </p>
       </td>
@@ -279,7 +280,7 @@
           {% if cat == 'research' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:140px">
-              <a href="{{post.image}}"><img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%; border-radius: 5%; border: 2px solid #555" /></a>
+              <a href="{{post.image}}"><img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:120%; border-radius: 5%; border: 2px solid #555" /></a>
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
