--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,6 +188,15 @@
                       SLAM library and benchmarking localization performance of different slam
                       packages.</li>
                 </ul>
+                <div class="row">
+                  <div class="column">
+                    <img src="images/go1.png" alt="go1" style="width:100%">
+                  </div>
+                  <div class="column">
+                    <img src="images/carto.png" alt="carto" style="width:100%">
+                  </div>
+                  
+                </div>
             </p>
         </td>
     </tr>
