--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,12 +188,12 @@
                       SLAM library and benchmarking localization performance of different slam
                       packages.</li>
                 </ul>
-                <div class="row">
-                  <div class="column">
-                    <img src="images/go1.png" alt="go1" style="width:50%; height:auto; max-width:120%; border-radius: 5%; border: 2px solid #555">
+                <div class="column">
+                  <div class="row">
+                    <img src="images/go1.png" alt="go1" style="width:50%; height:auto; border-radius: 5%; border: 2px solid #555">
                   </div>
-                  <div class="column">
-                    <img src="images/carto.png" alt="carto" style="width:50%; height:auto; max-width:120%; border-radius: 5%; border: 2px solid #555">
+                  <div class="row">
+                    <img src="images/carto.png" alt="carto" style="width:50%; height:auto; border-radius: 5%; border: 2px solid #555">
                   </div>
                   
                 </div>
