--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -191,11 +191,8 @@
                 <div class="row">
                   <div class="column">
                     <img src="images/go1.png" alt="go1" style="width:45%; height:auto; border-radius: 5%; border: 2px solid #555">
-                  </div>
-                  <div class="column">
                     <img src="images/carto.png" alt="carto" style="width:45%; height:auto; border-radius: 5%; border: 2px solid #555">
-                  </div>
-                  
+                  </div>                  
                 </div>
             </p>
         </td>
@@ -408,7 +405,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <!--<h2>Projects</h2>-->
-              <p> These include projects during research, work and courses.  
+              <p> These section include projects completed during courses.  
               </p>
             </td>
           </tr>
