--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,8 +190,8 @@
                 </ul>
                 <div class="row">
                   <div class="column">
-                    <img src="images/go1.png" alt="go1" style="width:45%; height:auto; border-radius: 5%; border: 2px solid #555">
-                    <img src="images/carto.png" alt="carto" style="width:45%; height:auto; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/go1.png" alt="go1" style="width:50%; height:90%; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/carto.png" alt="carto" style="width:50%; height:auto; border-radius: 5%; border: 2px solid #555">
                   </div>                  
                 </div>
             </p>
