--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -180,7 +180,7 @@
             Jul 2021 - Present
             <br>
             <p align="justify">
-              Working as student research assisting (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
+              Working as student research assistant (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
                     <li align="justify">Assisted deployment of mapping system on GO1 quadruped-robot. Streamline the process for calibrating, synchronizing, communicating, and  data recording from the sensors.</li>
                     <li align="justify">Implemented different ROS libraries for lidar-based localization and mapping. Dockerized and configured libraries for the mapping system.</li>
