--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,22 +74,22 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">I am a Masters student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the 
-                <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning and mapping along with thier 
-                implimentation using different robotics systems.
+              <p align="justify">I am a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I am also working as a student research assistant at the 
+                <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning 
+                and mapping along with their implementation using different robotics systems.
               </p>
               <p align="justify">
-                From Jul-2020 to Oct-2021, I worked at <a href="https://nust.edu.pk/">National University of Science and Technology</a>, 
-                as part of <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones 
+                From Jul-2020 to Oct-2021, I worked at the <a href="https://nust.edu.pk/">National University of Science and Technology</a>, 
+                as part of the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones 
                 (fixed wing and vertical take of and landing aerial vehicles) for urban environments. 
-                Additionally I also worked on development of models for flight simulator and tuning flight controlled through software-in-loop simulation.
+                Additionally, I also worked on the development of models for flight simulator and tuning flight control through software-in-loop simulation.
               </p>
               <p align="justify">
-                I have a Bachelors in Mechanical Engineering from <a href="https://www.neduet.edu.pk/">NED University of Engineering and Technology</a>, 
-                I work as a research assistant at Department of Mechanical Engineering under supervision of 
-                <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, where I numeriacally investigated different techniques 
-                for heat transfer enhancement through jet impingment <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
+                I also have a Bachelor's in Mechanical Engineering from <a href="https://www.neduet.edu.pk/">NED University of Engineering and Technology</a>, 
+                I work as a student research assistant at the Department of Mechanical Engineering under the supervision of 
+                <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, where I numerically investigated different techniques 
+                for heat transfer enhancement through jet impingement. <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
                 <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.
               </p>
               <p style="text-align:center">
@@ -236,7 +236,7 @@
           <p>Design Group:
             <ul> 
                 <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOL. </li>
-                <li align="justify">Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans. Optimized aerodynamics and structural components by conducting CFD, FEA, FSI simulations using ANSYS.Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans.</li>
+                <li align="justify">Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans. Optimized aerodynamics and structural components by conducting CFD, FEA, FSI simulations using ANSYS.</li>
                 <li align="justify">Design test bench and propulsion system for DLE-120 engine.</li>
             </ul>
         </p>
@@ -264,14 +264,12 @@
           <p align="justify">
             Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
               <ul>
-                  <li align="justify">Conducted a comparative study to assess different RANS turbulence mod-
-                    els for prediction of the secondary peak in Nusselt number resulting from
+                  <li align="justify">Conducted a comparative study to assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
                     a hydraulic jump in jet impingement cooling.</li>
-                  <li align="justify">Extensively reviewed literature and conducted numerical simulations re-
-                    lated to impinging jets focusing on the influence of different types of fins,
+                  <li align="justify">Extensively reviewed literature and conducted numerical simulations related to impinging jets focusing on the influence of different types of fins,
                     surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
-                    characteristics. Collaborate on two peer reviewed research papers based in findings.</li>
-                  <li align="justify">Guided two undergraduate student groups, on their research project.</li>
+                    characteristics. Collaborate on two peer-reviewed research papers based on findings.</li>
+                  <li align="justify">Mentored undergraduate student groups, on their research project.</li>
               </ul>
           </p>
       </td>
