--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,9 +132,9 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning *, Introduction to Deep Learning *, Scientific Visualization *, Functional Analysis and Computational Linear Algebra *  </li>
-                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II *   </li>
-                    (* in progress, current semester)
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra *, Scientific Visualization *, Numerical optimization for Robot Design and Control *, Introduction to Deep Learning *  </li>
+                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
+                    (* in progress)
                     
                 </ul>
             </p>
