--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,10 +157,10 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-              Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets 
+              Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets. 
               <br>
               <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
-              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.              
+              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>             
           </p>
       </td>
   </tr>
