--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,7 +172,7 @@
 <!-- Experience -->
 
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-experience" id="experience">
-  <h2>Experience</h2>
+  <h2>Research Experience</h2>
 </button>
 <div id="content-experience" class="collapse in">
 
@@ -190,7 +190,7 @@
             <br>
             <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
             <br>
-            Jul 2021 - Present
+            Jul 2022 - Present
             <br>
             <p align="justify">
               Working as student research assistant (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
